fixed layout issues

--- a/landing-page/src/index.css
+++ b/landing-page/src/index.css
@@ -4,7 +4,7 @@
   font-style: normal;
 }
 
-.scroll{
+.scroll {
   overflow-x: scroll;
   padding-top: 250px;
   padding-bottom: 50px;
@@ -77,10 +77,13 @@ html {
 
 .nav-bar {
   display: flex;
+  margin-top: 15%;
 }
 
 .main-title {
   color: rgb(34, 182, 34);
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 /*Mobile Nav Properties*/
 .mobile-nav {
@@ -88,6 +91,8 @@ html {
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
+  margin-bottom: 15%;
+  padding-top: 5%;
 }
 .title {
   margin-right: 3%;
@@ -213,7 +218,7 @@ html {
   .container {
     font-size: 0.9rem;
   }
-  .main-title{
+  .main-title {
     display: none;
   }
 }
